@@ -1,3 +1,9 @@
+2007-09-08  Zeeshan Ali  <zeenix@gstreamer.net>
+
+	* src/universal-cp-devicetreeview.c:
+
+	Retreive the service introspection, asynchronously.
+
 2007-09-07  Zeeshan Ali  <zeenix@gstreamer.net>
 
 	* AUTHORS:
